@@ -1,5 +1,11 @@
 \name{NEWS}
 \title{NEWS file for the survival package}
+\section{Changes in version 3.5-2}{
+  \itemize{
+    \item New release for CRAN; chase down some challenging (for me)
+    C-code memory issues
+    \item Clean up test case for drop.special
+}}
 \section{Changes in version 3.5-1}{
   \itemize{
     \item Minor edits to survreg (fit$coef to fit$coefficients) and
